tests/syntax_error/union_default.jou
class Foo:
    union:
        message: byte*
        num: int = 1  # Error: union members cannot have default values
